# Crazyflie-Controllers

./: .gitignore  README.md  REPORT.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
outputs/: README.md
outputs/data/circle/: mpc_data.csv  pid_data.csv  smc_data.csv
outputs/data/eight/: mpc_data.csv  pid_data.csv  smc_data.csv
outputs/data/square/: mpc_data.csv  pid_data.csv  smc_data.csv
outputs/data/step/: mpc_data.csv  pid_data.csv  smc_data.csv
outputs/data/triangle/: mpc_data.csv  pid_data.csv  smc_data.csv
scripts/: compare_controllers.py  main.py  run.py  run_tracking.py
src/: compare_controllers.py  run_tracking.py
src/Controllers/: base_controller.py  mpc_controller.py  pid_controller.py  smc_controller.py
src/crazyflie_controllers/controllers/: base_controller.py  mpc_controller.py  pid_controller.py  smc_controller.py
src/crazyflie_controllers/trajectories/: base_trajectory.py  circle.py  eight.py  square.py  step.py  triangle.py
src/crazyflie_controllers/utils/: logging.py
src/trajectories/: base_trajectory.py
src/trajectories/Circle/: mpc.py  pid.py  smc.py  trajectory.py
src/trajectories/Eight/: __init__.py  trajectory.py
src/trajectories/Square/: mpc.py  pid.py  smc.py  trajectory.py
src/trajectories/Step/: trajectory.py
src/trajectories/Triangle/: mpc.py  pid.py  smc.py  trajectory.py
tests/: test_controllers.py  test_logger.py  test_trajectories.py
