[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crazyflie_controllers"
version = "0.1.0"
description = "Research-grade controller benchmarking framework for Crazyflie"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "scipy",
    "matplotlib",
    "pandas",
    "gym-pybullet-drones",
    "cvxpy",
    "osqp"
]

[tool.setuptools.packages.find]
where = ["src"]
