[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crazyflie_controllers"
version = "0.1.0"
description = "Research-grade controller benchmarking framework for Crazyflie"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==2.2.6",
    "scipy==1.15.3",
    "matplotlib==3.10.7",
    "pandas==2.3.3",
    "gym-pybullet-drones",
    "cvxpy==1.7.5",
    "osqp==1.0.5"
]

[tool.setuptools.packages.find]
where = ["src"]
